# old_poker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_08_05_1514-b8574df7f903_create_user_model.py  2023_08_12_2219-1faea1cd71c7_fix_uuid_and_username_unique_in_user_.py  2024_01_29_1905-546380025f3a_database_creation.py  2024_03_27_1603-4c8efbaa554e_add_elo_field_to_user_model.py  2024_04_01_2232-490eb180e512_add_friendships_m2m_table.py  2024_04_08_2155-fe46c3e40a7f_initial_migration.py  2024_04_11_2039-d23ec9e1bd3c_add_game_models.py  2024_04_11_2051-2863bff86c88_rename_usergame_m2m_tables.py  2024_04_11_2059-31aa1e85847e_rename_usergame_m2m_tables.py  2024_04_11_2103-9f1037ed9cb0_rename_usergame_m2m_tables.py  2024_06_01_2339-69039f97ff0f_add_status_to_friendship_m2m_table.py  2024_06_02_1426-d326664306c9_add_lobby_table.py  2024_06_02_1444-bbc83de0c83e_fix_fk_leader_relationship.py  2024_06_02_2305-67f238ff61ca_add_game_tables.py  2024_06_04_1939-0552e4715206_add_column_is_current_round_to_set_table.py  2024_06_04_2023-8c0669703298_update_enum_type_for_suit.py  2024_06_04_2038-13df5f93aa8d_make_entry_id_column_of_card_table_be_.py  2024_06_04_2041-c6663e075bbb_make_trump_columns_of_set_table_be_.py  2024_06_04_2329-d432a66c8e6e_initial_migration.py  2024_06_14_0234-ad3e1a953a69_add_round_number.py  2025_05_24_0104-9ba56420afb2_init.py  2025_06_13_1654-75703d76f893_add_big_field.py  2025_06_14_1808-e69243b08234_add_actual_bid_and_score_fields.py
src/: config.py  conftest.py  database.py  dependencies.py  main.py  managers.py  repository.py  schemas.py  unitofwork.py  utils.py
src/analysis/: router.py
src/auth/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py
src/auth/services/: authentication.py  friend.py  registration.py  user.py
src/auth/tests/: test_routers.py
src/game/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py
src/game/services/: game.py  lobby.py
src/notification/: router.py  schemas.py  ws_events.py
src/search/: dependencies.py  router.py  schemas.py  services.py
tests/: conftest.py
