[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["Mykhailo <mikhail.yakubets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
