[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["Mykhailo <mikhail.yakubets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
python-decouple = "^3.8"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = ["src", "tests"]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
exclude = ["migrations"]

[tool.black]
line-length = 79
target-version = ["py311"]
