[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["Mykhailo <mikhail.yakubets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
python-decouple = "^3.8"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
httpx = "^0.25.2"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
fastapi = "^0.109.0"
bcrypt = "4.0.1"
sqlalchemy-utils = "^0.41.1"
websockets = "^12.0"
greenlet = "^3.2.3"
pydantic = {extras = ["email"], version = "^2.11.5"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
pytest-asyncio = "^0.23.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = ["src", "tests"]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
exclude = ["migrations"]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
